[project]
name = "openai-web-search"
version = "0.1.0"
description = "OpenAI web search example"
authors = [
    {name = "User"}
]
readme = "README.md"
requires-python = "^3.8"
dependencies = [
    "openai (>=1.71.0,<2.0.0)",
    "arxiv (>=2.1.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
